--- a/src/components/ExploreContainer.css
+++ b/src/components/ExploreContainer.css
@@ -12,7 +12,8 @@
   line-height: 26px;
 }
 
-.container p {
+.container p,
+.container label {
   font-size: 16px;
   line-height: 22px;
   color: #8c8c8c;
@@ -21,4 +22,20 @@
 
 .container a {
   text-decoration: none;
+}
+
+/* CALCULATOR */
+.input-group {
+  margin-block: 1rem;
+}
+.input-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.container p.result {
+  font-size: 2rem;
+  margin-top: 2rem;
 }
